updated url schemes to use https. fixed broken links.

--- a/ext/css/retrotxt_loader.css
+++ b/ext/css/retrotxt_loader.css
@@ -2,7 +2,7 @@
   filename: retrotxt_loader.css
 
   Animated spinner to display during the RetroTxt processing.
-  http://www.w3schools.com/howto/howto_css_loader.asp
+  https://www.w3schools.com/howto/howto_css_loader.asp
 
 */
 
