changed the colour of encoding links in the info header.

--- a/ext/css/layout.css
+++ b/ext/css/layout.css
@@ -156,6 +156,7 @@ header #fontnameInUse {
 header strong#colorPaletteToggle,
 header strong#renderToggle,
 header strong#sizeToggle,
+header strong#documentEncoding,
 header #moreSettings {
   color: var(--has-text-info);
 }
