update to spleen v2

--- a/ext/css/fonts_modern.css
+++ b/ext/css/fonts_modern.css
@@ -36,8 +36,20 @@
 }
 /* Spleen */
 @font-face {
+  font-family: "spleen6x12";
+  src: url("../fonts/spleen-6x12.woff2") format("woff2");
+  font-display: auto;
+  font-weight: 1;
+}
+.font-spleen6x12 {
+  font-family: spleen6x12;
+  /* font-size: 0.75rem; */
+  line-height: 1;
+}
+@font-face {
+  /* 14/6/23 this font family name should be kept for legacy purposes */
   font-family: "spleen";
-  src: url("../fonts/spleen-8x161.woff2") format("woff2");
+  src: url("../fonts/spleen-8x16.woff2") format("woff2");
   font-display: auto;
   font-weight: 1;
 }
@@ -47,36 +59,36 @@
   line-height: 1;
 }
 @font-face {
-  font-family: "spleen6x12";
-  src: url("../fonts/spleen-6x121.woff2") format("woff2");
-  font-display: auto;
-  font-weight: 1;
-}
-.font-spleen6x12 {
-  font-family: spleen6x12;
-  font-size: 0.75rem;
-  line-height: 1;
-}
-@font-face {
   font-family: "spleen12x24";
-  src: url("../fonts/spleen-12x243.woff2") format("woff2");
+  src: url("../fonts/spleen-12x24.woff2") format("woff2");
   font-display: auto;
   font-weight: 1;
 }
 .font-spleen12x24 {
   font-family: spleen12x24;
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1;
 }
 @font-face {
   font-family: "spleen16x32";
-  src: url("../fonts/spleen-16x323.woff2") format("woff2");
+  src: url("../fonts/spleen-16x32.woff2") format("woff2");
   font-display: auto;
   font-weight: 1;
 }
 .font-spleen16x32 {
   font-family: spleen16x32;
-  font-size: 2rem;
+  font-size: 1rem;
+  line-height: 1;
+}
+@font-face {
+  font-family: "spleen32x64";
+  src: url("../fonts/spleen-32x64.woff2") format("woff2");
+  font-display: auto;
+  font-weight: 1;
+}
+.font-spleen32x64 {
+  font-family: spleen32x64;
+  font-size: 1rem;
   line-height: 1;
 }
 /* Unscii fonts */
