--- a/ext/css/fonts_modern.css
+++ b/ext/css/fonts_modern.css
@@ -43,7 +43,7 @@
 }
 .font-spleen6x12 {
   font-family: spleen6x12;
-  /* font-size: 0.75rem; */
+  font-size: 1rem;
   line-height: 1;
 }
 @font-face {
