--- a/ext/css/layout.css
+++ b/ext/css/layout.css
@@ -130,14 +130,9 @@ header hr {
   width: 98%;
 }
 
-header strong,
-header #moreSettings {
+header strong{
   cursor: pointer;
   user-select: none;
-}
-
-header #moreSettings {
-  text-decoration: underline;
 }
 
 header#headerMinimal {
@@ -162,8 +157,7 @@ header #fontnameInUse {
 header strong#colorPaletteToggle,
 header strong#renderToggle,
 header strong#sizeToggle,
-header strong#documentEncoding,
-header #moreSettings {
+header strong#documentEncoding {
   color: var(--has-text-info);
 }
 
