Work in progresses for #177.

--- a/ext/css/options.css
+++ b/ext/css/options.css
@@ -103,6 +103,10 @@ main > section #jumpTo {
   display: none;
 }
 
+#colorPaletteForm table {
+  border: 1px solid black;
+}
+
 /* replace checkbox with a toggle switch */
 .toggleswitch {
   position: relative;
