--- a/ext/css/options.css
+++ b/ext/css/options.css
@@ -17,6 +17,7 @@
   --separator-line: var(--separator-height) solid rgba(0, 0, 0, 0.06);
   --status-size: 0.85em;
   --toggle-size: 0.9rem;
+  --toggle-time: 0.3s;
 
   /* colour palettes vga */
   .vga-black {
@@ -374,6 +375,7 @@ main > section #jumpTo {
   border: 0;
   border-radius: calc(var(--toggle-size) * 1.5);
   background-color: #9e9e9e;
+  transition: all var(--toggle-time) ease-in;
 }
 .toggleswitch-label:before {
   content: "";
@@ -386,13 +388,16 @@ main > section #jumpTo {
   right: calc(var(--toggle-size) * 1.3);
   border-radius: calc(var(--toggle-size) * 1.5);
   background-color: #757575;
+  transition: all var(--toggle-time) ease-in-out;
 }
 .toggleswitch > input:checked + .toggleswitch-label {
   background-color: #42a5f5;
+  transition: all var(--toggle-time) ease-in;
 }
 .toggleswitch > input:checked + .toggleswitch-label,
 .toggleswitch > input:checked + .toggleswitch-label:before {
   border-color: #42a5f5;
+  transition: all var(--toggle-time) ease-in;
 }
 .toggleswitch > input:checked + .toggleswitch-label .toggleswitch-inner {
   margin-left: 0;
@@ -400,10 +405,12 @@ main > section #jumpTo {
 .toggleswitch > input:checked + .toggleswitch-label:before {
   right: 0;
   background-color: #2196f3;
+  transition: all var(--toggle-time) ease-in;
 }
 .toggleswitch > input:disabled + .toggleswitch-label,
 .toggleswitch > input:disabled + .toggleswitch-label:before {
   background-color: #9e9e9e;
+  transition: all var(--toggle-time) ease-in;
 }
 
 /* svg icons */
