wrap text behaves correctly.

--- a/ext/css/text_pagewrap.css
+++ b/ext/css/text_pagewrap.css
@@ -24,3 +24,9 @@ article > pre {
   */
   min-width: auto;
 }
+
+/* for ascii text that lack line breaks, wrap text to the browser tab */
+.has-text-plain {
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+}
