Fixed Blinking cursor and text off option not applying to the cursor

--- a/ext/css/text_animation-off.css
+++ b/ext/css/text_animation-off.css
@@ -10,6 +10,11 @@
   --blink-fast-timer: 0ms;
 }
 
+/* DOS cursor blinking */
+.dos-cursor {
+  animation: none;
+}
+
 /* PCBoard blinking */
 i.PB8,
 i.PB9,
